--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="inner text-start">
-                                    <span>Freelance digital designer</span>
-                                    <h1 class="title">Hi, I’m <span>Jone Doe</span></h1>
-                                    <h2>based in USA.</h2>
+                                    <span>Professional DJ &amp; Producer</span>
+                                    <h1 class="title">Hi, I’m <span>Corey Dawkins</span></h1>
+                                    <h2>based in Toronto.</h2>
                                 </div>
                             </div>
                         </div>
