--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                                     <a class="nav-link" href="#about">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#service">Service</a>
+                                    <a class="nav-link" href="#service">Services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#portfolio">Portfolio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#blog">Blog</a>
+                                    <a class="nav-link" href="#blog">Events</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#contact">Contact</a>
@@ -85,7 +85,7 @@
                             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
-                    <div class="header-btn ml_md--20 ml_sm--0"><a class="rn-btn" href="#"><span>buy now</span></a>
+                    <div class="header-btn ml_md--20 ml_sm--0"><a class="rn-btn" href="#"><span>Contact Me</span></a>
                     </div>
                     <!-- Start Humberger Menu  -->
                     <div class="humberger-menu d-block d-lg-none pl--20 pl_sm--10">
@@ -669,7 +669,7 @@
                     <div class="col-lg-4 col-md-12 col-sm-12 col-12">
                         <div class="inner text-lg-end text-center mt_md--20 mt_sm--20">
                             <div class="text">
-                                <p>Copyright © 2022 Rainbow-Themes. All Rights Reserved.</p>
+                                <p>Copyright © 2023 Corey Dawkins. All Rights Reserved.</p>
                             </div>
                         </div>
                     </div>
