--- a/index.html
+++ b/index.html
@@ -142,10 +142,8 @@
                                 <div class="about-inner inner pt--100 pt_sm--40 pt_md--40">
                                     <div class="section-title">
                                         <h2 class="title">About Me</h2>
-                                        <p class="description">There are many variations of passages of Lorem Ipsum
-                                            available, but the majority have suffered <a href="#">alteration</a> in
-                                            some form, by injected humour, or randomised words which dont look even
-                                            slightly believable. If you are going to use a passage of Lorem Ipsum,
+                                        <p class="description">
+                                            As a DJ, producer, and promoter, with 20+ years in Toronto's music scene, my versatility and music knowledge have made me a main-stay in hip hop, house, and neo-soul communities, and beyond. I've collaborated with the some of the city's best talent and held many long-term residencies. My sets get people moving, transcend genre, and are sure to enhance your next event.
                                         </p>
                                     </div>
                                     <div class="tab-wrapper mt--30">
