--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                     <div class="section-title">
                                         <h2 class="title">About Me</h2>
                                         <p class="description">
-                                            As a DJ, producer, and promoter, with 20+ years in Toronto's music scene, my versatility and music knowledge have made me a main-stay in hip hop, house, and neo-soul communities, and beyond. I've collaborated with the some of the city's best talent and held many long-term residencies. My sets get people moving, transcend genre, and are sure to enhance your next event.
+                                            As a DJ, producer, and promoter, with 20+ years in Toronto's music scene, my versatility and music knowledge have made me a main-stay in hip hop, house, and neo-soul communities, and beyond. I've collaborated with the some of the city's best talent and held many long-term residencies. My sets get people moving, transcend genre, and are will enhance your next event.
                                         </p>
                                     </div>
                                     <div class="tab-wrapper mt--30">
@@ -318,7 +318,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="section-title section-title--3 text-center mb--30">
-                                <h2 class="title">My Latest Project</h2>
+                                <h2 class="title">Upcoming Events</h2>
                                 <p>There are many variations of passages of Lorem Ipsum available, <br /> but the
                                     majority have suffered alteration.</p>
                             </div>
@@ -387,68 +387,6 @@
                             </div>
                         </div>
                         <!-- End Single Portfolio  -->
-                        <!-- Start Single Portfolio  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30">
-                            <div class="portfolio text-center">
-                                <div class="thumbnail-inner">
-                                    <div class="thumbnail image-4"></div>
-                                    <div class="bg-blr-image image-4"></div>
-                                </div>
-                                <div class="content">
-                                    <div class="inner">
-                                        <p>Development</p>
-                                        <h4><a href="portfolio-details.html">Getting tickets to the big show</a>
-                                        </h4>
-                                        <div class="portfolio-button">
-                                            <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Portfolio  -->
-
-                        <!-- Start Single Portfolio  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30">
-                            <div class="portfolio text-center">
-                                <div class="thumbnail-inner">
-                                    <div class="thumbnail image-3"></div>
-                                    <div class="bg-blr-image image-3"></div>
-                                </div>
-                                <div class="content">
-                                    <div class="inner">
-                                        <p>Development</p>
-                                        <h4><a href="portfolio-details.html">Getting tickets to the big show</a>
-                                        </h4>
-                                        <div class="portfolio-button">
-                                            <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Portfolio  -->
-
-                        <!-- Start Single Portfolio  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30">
-                            <div class="portfolio text-center">
-                                <div class="thumbnail-inner">
-                                    <div class="thumbnail image-2"></div>
-                                    <div class="bg-blr-image image-2"></div>
-                                </div>
-                                <div class="content">
-                                    <div class="inner">
-                                        <p>Development</p>
-                                        <h4><a href="portfolio-details.html">Getting tickets to the big show</a>
-                                        </h4>
-                                        <div class="portfolio-button">
-                                            <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Portfolio  -->
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
@@ -467,7 +405,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="section-title section-title--3 text-center mb--30">
-                                <h2 class="title">Latest News</h2>
+                                <h2 class="title">Recent Events</h2>
                                 <p>There are many variations of passages of Lorem Ipsum available, <br /> but the
                                     majority have suffered alteration.</p>
                             </div>
