--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                     <div class="section-title">
                                         <h2 class="title">About Me</h2>
                                         <p class="description">
-                                            As a DJ, producer, and promoter, with 20+ years in Toronto's music scene, my versatility and music knowledge have made me a main-stay in hip hop, house, and neo-soul communities, and beyond. I've collaborated with the some of the city's best talent and held many long-term residencies. My sets get people moving, transcend genre, and are will enhance your next event.
+                                            As a DJ, producer, and promoter, with 20+ years in Toronto's music scene, my versatility and music knowledge have made me a main-stay in hip hop, house, and neo-soul communities, and beyond. I've collaborated with the some of the city's best talent and held many long-term residencies. My sets get people moving, transcend genre, and will enhance your next event.
                                         </p>
                                     </div>
                                     <div class="tab-wrapper mt--30">
@@ -260,7 +260,7 @@
                                             <i data-feather="cast"></i>
                                         </div>
                                         <div class="content">
-                                            <h3 class="title">Business Stratagy</h3>
+                                            <h3 class="title">Corporate Events</h3>
                                             <p>I throw myself down among the tall grass by the stream as I lie close to
                                                 the earth.</p>
                                         </div>
@@ -279,7 +279,7 @@
                                             <i data-feather="layers"></i>
                                         </div>
                                         <div class="content">
-                                            <h3 class="title">Website Development</h3>
+                                            <h3 class="title">WWeddings &amp; Receptions</h3>
                                             <p>I throw myself down among the tall grass by the stream as I lie close to
                                                 the earth.</p>
                                         </div>
@@ -298,7 +298,7 @@
                                             <i data-feather="users"></i>
                                         </div>
                                         <div class="content">
-                                            <h3 class="title">Marketing & Reporting</h3>
+                                            <h3 class="title">Venue Events &amp; Residencies</h3>
                                             <p>I throw myself down among the tall grass by the stream as I lie close to
                                                 the earth.</p>
                                         </div>
