--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                                     <a class="nav-link" href="#service">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                                    <a class="nav-link" href="#portfolio">Upcoming</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#blog">Events</a>
+                                    <a class="nav-link" href="#blog">Past</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#contact">Contact</a>
