--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
                                     <div class="tab-wrapper mt--30">
                                         <ul class="nav nav-tabs tab-style--1" id="myTab" role="tablist">
                                             <li class="nav-item">
-                                                <a class="nav-link active" id="mainskill" data-bs-toggle="tab" data-bs-target="#rn-mainskill" role="tab" aria-controls="mainskill" aria-selected="true">Main skills</a>
+                                                <a class="nav-link active" id="mainskill" data-bs-toggle="tab" data-bs-target="#rn-mainskill" role="tab" aria-controls="mainskill" aria-selected="true">Learn More</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" id="awards" data-bs-toggle="tab" data-bs-target="#rn-awards" role="tab" aria-controls="awards" aria-selected="false">Awards</a>
+                                                <a class="nav-link" id="awards" data-bs-toggle="tab" data-bs-target="#rn-awards" role="tab" aria-controls="awards" aria-selected="false">My Sessions</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" id="experience" data-bs-toggle="tab" data-bs-target="#rn-experience" role="tab" aria-controls="experience" aria-selected="false">Experience</a>
+                                                <a class="nav-link" id="experience" data-bs-toggle="tab" data-bs-target="#rn-experience" role="tab" aria-controls="experience" aria-selected="false">My Music</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" id="education" data-bs-toggle="tab" data-bs-target="#rn-education" role="tab" aria-controls="education" aria-selected="false">Education & Certification</a>
+                                                <a class="nav-link" id="education" data-bs-toggle="tab" data-bs-target="#rn-education" role="tab" aria-controls="education" aria-selected="false">Where to Find Me</a>
                                             </li>
                                         </ul>
                                         <div class="tab-content" id="myTabContent">
