--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corey Dawkins | Toronto DJ & Producer</title>
+    <title>Corey Dawkins | Toronto DJ, Producer & Promoter</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -243,7 +243,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="section-title service-style--3 text-center mb--20 mb_sm--0 md_md--0">
-                                <h2 class="title">My Awesome Service</h2>
+                                <h2 class="title">My Specialties</h2>
                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have
                                     suffered alteration.</p>
                             </div>
