--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                             <i data-feather="cast"></i>
                                         </div>
                                         <div class="content">
-                                            <h3 class="title">Corporate Events</h3>
+                                            <h3 class="title">Commercial &amp; Corporate Events</h3>
                                             <p>I throw myself down among the tall grass by the stream as I lie close to
                                                 the earth.</p>
                                         </div>
@@ -279,7 +279,7 @@
                                             <i data-feather="layers"></i>
                                         </div>
                                         <div class="content">
-                                            <h3 class="title">WWeddings &amp; Receptions</h3>
+                                            <h3 class="title">Engagements, Weddings &amp; Receptions</h3>
                                             <p>I throw myself down among the tall grass by the stream as I lie close to
                                                 the earth.</p>
                                         </div>
