--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
                         <!-- Start Single Service  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--40">
                             <div class="single-service service__style--2 bg-color-gray">
-                                <a href="service-details.html">
+                                <a>
                                     <div class="service">
                                         <div class="icon">
                                             <i data-feather="cast"></i>
                                         </div>
                                         <div class="content">
-                                            <h3 class="title">Commercial &amp; Corporate Events</h3>
+                                            <h3 class="title">Commercial Spaces &amp; Corporate Events</h3>
                                             <p>I throw myself down among the tall grass by the stream as I lie close to
                                                 the earth.</p>
                                         </div>
@@ -273,7 +273,7 @@
                         <!-- Start Single Service  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--40">
                             <div class="single-service service__style--2 bg-color-gray">
-                                <a href="service-details.html">
+                                <a>
                                     <div class="service">
                                         <div class="icon">
                                             <i data-feather="layers"></i>
@@ -292,7 +292,7 @@
                         <!-- Start Single Service  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt--40">
                             <div class="single-service service__style--2 bg-color-gray">
-                                <a href="service-details.html">
+                                <a>
                                     <div class="service">
                                         <div class="icon">
                                             <i data-feather="users"></i>
