--- a/index.html
+++ b/index.html
@@ -483,9 +483,8 @@
                         <div class="row row--35 align-items-start">
                             <div class="col-lg-6 order-2 order-lg-1">
                                 <div class="section-title text-start mb--50 mb_sm--30 mb_md--30">
-                                    <h2 class="title">Hire Me.</h2>
-                                    <p class="description">I am available for freelance work. Connect with me via
-                                        phone:
+                                    <h2 class="title">Let's Chop It Up!</h2>
+                                    <p class="description">Let's talk about how I can create the best possible auditory experience for your event:
                                         <a href="tel:+8801923088574">01923 088574</a> or email:
                                         <a href="mailto:admin@example.com"> admin@example.com</a>
                                     </p>
