--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="inner text-start">
-                                    <span>Professional DJ &amp; Producer</span>
+                                    <span>DJ, Producer &amp; Promoter</span>
                                     <h1 class="title">Hi, I’m <span>Corey Dawkins</span></h1>
-                                    <h2>based in Toronto.</h2>
+                                    <h4>based in Toronto.</h4>
                                 </div>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                                     <div class="section-title">
                                         <h2 class="title">About Me</h2>
                                         <p class="description">
-                                            As a DJ, producer, and promoter, with 20+ years in Toronto's music scene, my versatility and music knowledge have made me a main-stay in hip hop, house, and neo-soul communities, and beyond. I've collaborated with the some of the city's best talent and held many long-term residencies. My sets get people moving, transcend genre, and will enhance your next event.
+                                            As a DJ, producer, and promoter, with 20+ years in Toronto's music scene, my versatility and music knowledge have made me a main-stay in the local hip hop, house, and neo-soul communities, and beyond. I've collaborated with many of the city's top talent and held regular long-term residencies at popular venues. My sets get people moving, transcend genre, and will enhance your next event.
                                         </p>
                                     </div>
                                     <div class="tab-wrapper mt--30">
