--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                 <a>
                                     <div class="service">
                                         <div class="icon">
-                                            <i data-feather="cast"></i>
+                                            <i class="fa-thin fa-rings-wedding fa-2xs"></i>
                                         </div>
                                         <div class="content">
                                             <h3 class="title">Commercial Spaces &amp; Corporate Events</h3>
