--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                                     <a class="nav-link" href="#service">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#portfolio">Upcoming</a>
+                                    <a class="nav-link" href="#portfolio">Upcoming Events</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#blog">Past</a>
+                                    <a class="nav-link" href="#blog">Past Events</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#contact">Contact</a>
@@ -119,8 +119,8 @@
                             <div class="col-lg-12">
                                 <div class="inner text-start">
                                     <span>DJ, Producer &amp; Promoter</span>
-                                    <h1 class="title">Hi, I’m <span>Corey Dawkins</span></h1>
-                                    <h4>based in Toronto.</h4>
+                                    <h1 class="title">I’m <span>Corey Dawkins</span></h1>
+                                    <h4>Experience my music and I in Toronto.</h4>
                                 </div>
                             </div>
                         </div>
