--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	============================================ -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/b628d7205f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/vendor/fontawesome.css">
     <link rel="stylesheet" href="assets/css/vendor/lightbox.css">
     <link rel="stylesheet" href="assets/css/plugins/plugins.css">
@@ -236,7 +237,7 @@
                                 <a>
                                     <div class="service">
                                         <div class="icon">
-                                            <i class="fa-thin fa-rings-wedding fa-2xs"></i>
+                                            <i class="fa-thin fa-user-tie-hair fa-2xs"></i>
                                         </div>
                                         <div class="content">
                                             <h3 class="title">Commercial Spaces &amp; Corporate Events</h3>
@@ -255,7 +256,7 @@
                                 <a>
                                     <div class="service">
                                         <div class="icon">
-                                            <i data-feather="layers"></i>
+                                            <i class="fa-thin fa-rings-wedding fa-2xs"></i>
                                         </div>
                                         <div class="content">
                                             <h3 class="title">Engagements, Weddings &amp; Receptions</h3>
@@ -274,7 +275,7 @@
                                 <a>
                                     <div class="service">
                                         <div class="icon">
-                                            <i data-feather="users"></i>
+                                            <i class="fa-thin fa-speakers fa-2xs"></i>
                                         </div>
                                         <div class="content">
                                             <h3 class="title">Venue Events &amp; Residencies</h3>
@@ -537,11 +538,8 @@
     </div>
     <!-- JS
 ============================================ -->
-    <!-- Modernizer JS -->
     <script src="assets/js/vendor/modernizr.min.js"></script>
-    <!-- jQuery JS -->
     <script src="assets/js/vendor/jquery.js"></script>
-    <!-- Bootstrap JS -->
     <script src="assets/js/vendor/bootstrap.min.js"></script>
     <script src="assets/js/vendor/stellar.js"></script>
     <script src="assets/js/vendor/particles.js"></script>
@@ -551,7 +549,6 @@
     <script src="assets/js/vendor/js.cookie.js"></script>
     <script src="assets/js/vendor/jquery.style.switcher.js"></script>
     <script src="assets/js/vendor/jquery-one-page-nav.js"></script>
-    <!-- Main JS -->
     <script src="assets/js/main.js"></script>
 
 
