--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
                         <div id="ap1" class="audioplayer-tobe " style=" "  data-thumb_link="./img/adg3.jpg" data-scrubbg="waves/scrubbg.png" data-scrubprog="waves/scrubprog.png" data-videoTitle="Audio Video" data-type="audio" data-source="https://storage.googleapis.com/dawkins-cdn/sessions/80%20s%20MIX%20-%20Corey%20Dawkins.mp3">
                             <!--  data-sourceogg="sounds/adg3.ogg" http://www.stephaniequinn.com/Music/Commercial%20DEMO%20-%2011.mp3 -->
                             <div class="meta-artist">
-                                <span class="the-artist">Corey Dawkins</span><span class="the-name">20 Mix</span>
+                                <span class="the-artist">Corey Dawkins</span><span class="the-name">80 Mix</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(./img/adg3.jpg)"></div></div>
                                 <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">20 Mix</span>
+                                <span class="the-name">80 Mix</span>
                                 <div class="float-right">
                                     <!-- <a href="#"><span class="button-buy">Buy</span></a> -->
                                     <a href="#"><span class="misc-icon-itunes"></span></a>
@@ -222,24 +222,24 @@
                         <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/sessions/Aroso%CC%A3%20-%20Vanglorious%20Sounds%20Episode%2026%20With%20Kush%20Nubia%20(Guest%20%20COREY%20DAWKINS)%20June%2012%202021.mp3">
-                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">20Vanglorious</span>
+                            <div class="meta-artist"><span class="the-artist">Aroso, with guest Corey Dawkins</span><span class="the-name">Vanglorious Sounds, With Kush Nubia (Episode 26, June 12 2021)</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(img/thumb4.jpg)"></div></div>
-                                <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">20Vanglorious</span>
+                                <span class="the-artist">Aroso, with guest Corey Dawkins</span>
+                                <span class="the-name">Vanglorious Sounds, With Kush Nubia (Episode 26, June 12 2021)</span>
                             </div>
                         </div>
 
                         <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/sessions/Breadfruit%20Sessions%20Vol.15%20-%20Corey%20Dawkins.mp3">
-                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">Breadfruit</span>
+                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">Breadfruit Sessions Vol.15</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(img/thumb4.jpg)"></div></div>
                                 <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">Breadfruit</span>
+                                <span class="the-name">Breadfruit Sessions Vol.15</span>
                             </div>
                         </div>
 
@@ -247,12 +247,12 @@
                         <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/sessions/R%26B%20Junkies%202%20-%20Corey%20Dawkins.mp3">
-                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">20Junkies</span>
+                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">R&B Junkies 2</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(img/thumb4.jpg)"></div></div>
                                 <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">20Junkies</span>
+                                <span class="the-name">R&B Junkies 2</span>
                             </div>
                         </div>
                     </div>
@@ -280,12 +280,12 @@
                         <div id="ap1" class="audioplayer-tobe " style=" "  data-thumb_link="./img/adg3.jpg" data-scrubbg="waves/scrubbg.png" data-scrubprog="waves/scrubprog.png" data-videoTitle="Audio Video" data-type="audio" data-source="https://storage.googleapis.com/dawkins-cdn/music/Corey%20Dawkins%20-%20ADVERSI-KEYS.mp3">
                             <!--  data-sourceogg="sounds/adg3.ogg" http://www.stephaniequinn.com/Music/Commercial%20DEMO%20-%2011.mp3 -->
                             <div class="meta-artist">
-                                <span class="the-artist">Corey Dawkins</span><span class="the-name">Adversi keys</span>
+                                <span class="the-artist">Corey Dawkins</span><span class="the-name">Adversi-Keys</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(./img/adg3.jpg)"></div></div>
                                 <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">Adversi keys</span>
+                                <span class="the-name">Adversi-Keys</span>
                                 <div class="float-right">
                                     <!-- <a href="#"><span class="button-buy">Buy</span></a> -->
                                     <a href="#"><span class="misc-icon-itunes"></span></a>
@@ -303,24 +303,24 @@
                         <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/music/Corey%20Dawkins%20-%20Dirty%20-%20T.%20Soul%20(Corey%20Dawkins%20Re-touch).mp3">
-                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">Dirty</span>
+                            <div class="meta-artist"><span class="the-artist">T. Soul</span><span class="the-name">Dirty (Corey Dawkins Re-touch)</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(img/thumb4.jpg)"></div></div>
-                                <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">Dirty</span>
+                                <span class="the-artist">T. Soul</span>
+                                <span class="the-name">Dirty (Corey Dawkins Re-touch)</span>
                             </div>
                         </div>
 
                         <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/music/Corey%20Dawkins%20-%20Rudimental%20-%20Spoons%20(feat.%20MNEK%20%26%20Syron)%20(Corey%20Dawkins%20Re-Touch).mp3">
-                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">Rudimental Spoons</span>
+                            <div class="meta-artist"><span class="the-artist">Spoons, featuring MNEK & Syron</span><span class="the-name">Rudimental (Corey Dawkins Re-touch)</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(img/thumb4.jpg)"></div></div>
-                                <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">Rudimental Spoons</span>
+                                <span class="the-artist">Spoons, featuring MNEK & Syron</span>
+                                <span class="the-name">Rudimental (Corey Dawkins Re-touch)</span>
                             </div>
                         </div>
 
@@ -328,12 +328,12 @@
                         <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/music/Corey%20Dawkins%20-%20Still%20a%20dancer%20-%20Kemdi%20(Corey%20Dawkins%20re-touch).mp3">
-                            <div class="meta-artist"><span class="the-artist">Corey Dawkins</span><span class="the-name">Still Dance Kemdi</span>
+                            <div class="meta-artist"><span class="the-artist">Kemdi</span><span class="the-name">Still a Dancer (Corey Dawkins Re-touch)</span>
                             </div>
                             <div class="menu-description">
                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(img/thumb4.jpg)"></div></div>
-                                <span class="the-artist">Corey Dawkins</span>
-                                <span class="the-name">Still Dance Kemdi</span>
+                                <span class="the-artist">Kemdi</span>
+                                <span class="the-name">Still a Dancer (Corey Dawkins Re-touch)</span>
                             </div>
                         </div>
                     </div>
