--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                 dzsag_init('#'+playerid2,{
                     'transition':'fade'
                     ,'cueFirstMedia' : 'off'
-                    ,'autoplay' : 'on'
+                    ,'autoplay' : 'off'
                     ,'autoplayNext' : 'on'
                     ,design_menu_position:'bottom'
                     ,'settings_ap':settings_ap
@@ -778,7 +778,7 @@
                 dzsag_init('#'+playerid,{
                     'transition':'fade'
                     ,'cueFirstMedia' : 'off'
-                    ,'autoplay' : 'on'
+                    ,'autoplay' : 'off'
                     ,'autoplayNext' : 'on'
                     ,design_menu_position:'bottom'
                     ,'settings_ap':settings_ap
