--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Corey Dawkins | Toronto DJ, Producer & Promoter</title>
     <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="">
+    <meta name="description" content="Looking for a professional DJ who can cater to any event and keep the crowd entertained? Look no further than Corey Dawkins! With years of experience and a versatile music library that spans all genres, Corey has the expertise and skill to create the perfect vibe for weddings, corporate events, parties, and more. From sound system setup to customized track lists, Corey delivers top-notch service that ensures your event is a success. Book Corey Dawkins today and get ready to dance the night away!">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <!-- Favicon -->
@@ -534,7 +534,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="section-title section-title--3 text-center mb--30">
-                                <h2 class="title">Recent Events</h2>
+                                <h2 class="title">Past Events</h2>
                                 <p>There are many variations of passages of Lorem Ipsum available, <br /> but the
                                     majority have suffered alteration.</p>
                             </div>
