--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
                                                                         <div id="ap1" class="audioplayer-tobe " style=" "  data-thumb_link="./img/adg3.jpg" data-scrubbg="waves/scrubbg.png" data-scrubprog="waves/scrubprog.png" data-videoTitle="Audio Video" data-type="audio" data-source="https://storage.googleapis.com/dawkins-cdn/sessions/80%20s%20MIX%20-%20Corey%20Dawkins.mp3">
                                                                             <!--  data-sourceogg="sounds/adg3.ogg" http://www.stephaniequinn.com/Music/Commercial%20DEMO%20-%2011.mp3 -->
                                                                             <div class="meta-artist">
-                                                                                <span class="the-artist">Corey Dawkins</span><span class="the-name">80 Mix</span>
+                                                                                <span class="the-artist">Corey Dawkins</span><span class="the-name">80's Mix</span>
                                                                             </div>
                                                                             <div class="menu-description">
                                                                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(./img/adg3.jpg)"></div></div>
                                                                                 <span class="the-artist">Corey Dawkins</span>
-                                                                                <span class="the-name">80 Mix</span>
+                                                                                <span class="the-name">80's Mix</span>
                                                                                 <div class="float-right">
                                                                                     <!-- <a href="#"><span class="button-buy">Buy</span></a> -->
                                                                                     <a href="#"><span class="misc-icon-itunes"></span></a>
@@ -211,12 +211,12 @@
                                                                         <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
                                                                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                                                                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/sessions/Aroso%CC%A3%20-%20Vanglorious%20Sounds%20Episode%2026%20With%20Kush%20Nubia%20(Guest%20%20COREY%20DAWKINS)%20June%2012%202021.mp3">
-                                                                            <div class="meta-artist"><span class="the-artist">Aroso, with guest Corey Dawkins</span><span class="the-name">Vanglorious Sounds, With Kush Nubia (Episode 26, June 12 2021)</span>
+                                                                            <div class="meta-artist"><span class="the-artist">Aroso, with guest Corey Dawkins</span><span class="the-name">Vanglorious Sounds, With Kush Nubia (Episode 26; June 12, 2021)</span>
                                                                             </div>
                                                                             <div class="menu-description">
                                                                                 <div class="menu-item-thumb-con"><div class="menu-item-thumb" style="background-image: url(img/thumb4.jpg)"></div></div>
                                                                                 <span class="the-artist">Aroso, with guest Corey Dawkins</span>
-                                                                                <span class="the-name">Vanglorious Sounds, With Kush Nubia (Episode 26, June 12 2021)</span>
+                                                                                <span class="the-name">Vanglorious Sounds, With Kush Nubia (Episode 26; June 12, 2021)</span>
                                                                             </div>
                                                                         </div>
 
