--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                                                         </div>
 
 
-                                                                        <div class="audioplayer-tobe" style=" " data-thumb="img/thumb4.jpg"
+                                                                        <div class="audioplayer-tobe" style="margin-top: 20px;" data-thumb="img/thumb4.jpg"
                                                                              data-scrubbg="img/scrubbg.png" data-bgimage="img/bg2.jpg" data-scrubprog="img/scrubprog.png" data-videoTitle="Audio Video"
                                                                              data-type="normal" data-source="https://storage.googleapis.com/dawkins-cdn/sessions/Aroso%CC%A3%20-%20Vanglorious%20Sounds%20Episode%2026%20With%20Kush%20Nubia%20(Guest%20%20COREY%20DAWKINS)%20June%2012%202021.mp3">
                                                                             <div class="meta-artist"><span class="the-artist">Aroso, with guest Corey Dawkins</span><span class="the-name">Vanglorious Sounds, With Kush Nubia (Episode 26; June 12, 2021)</span>
