--- a/index.html
+++ b/index.html
@@ -340,15 +340,10 @@
                                             <div class="tab-pane fade" id="rn-education" role="tabpanel" aria-labelledby="education">
                                                 <div class="single-tab-content">
                                                     <ul>
-                                                        <li><a href="/service">BSc In CSE<span> - ABC University,
-                                                                    Los Angeles,
-                                                                    CA</span></a> 2010</li>
-                                                        <li><a href="/service">Diploma in Computer Science<span> -
-                                                                    Gamma Technical
-                                                                    Institute</span></a> 2009</li>
-                                                        <li><a href="/service">Graphic Designer<span> - ABC
-                                                                    Institute, Los Angeles,
-                                                                    CA</span></a> 2007</li>
+                                                        <li><a href="/service">RUUTED events at<span> The Junction Underground, Toronto</span></a></li>
+                                                        <li><a href="/service">With feature bands at<span> 3030 Dundas West, Toronto</span></a></li>
+                                                        <li><a href="/service">Sud Saturdays at<span> Sud Forno, Toronto</span></a></li>
+                                                        <li><a href="/service">Monthly appearances at<span> Radius, Hamilton</span></a></li>
                                                     </ul>
                                                 </div>
                                             </div>
