--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@
                                             <div class="tab-pane fade" id="rn-education" role="tabpanel" aria-labelledby="education">
                                                 <div class="single-tab-content">
                                                     <ul>
-                                                        <li><a href="/service">RUUTED events at<span> The Junction Underground, Toronto</span></a></li>
-                                                        <li><a href="/service">With feature bands at<span> 3030 Dundas West, Toronto</span></a></li>
-                                                        <li><a href="/service">Sud Saturdays at<span> Sud Forno, Toronto</span></a></li>
-                                                        <li><a href="/service">Monthly appearances at<span> Radius, Hamilton</span></a></li>
+                                                        <li><a href="https://www.junctionunderground.com/events"><strong>RUUTED events</strong> at<span> The Junction Underground, Toronto</span></a></li>
+                                                        <li><a href="http://www.3030dundaswest.com/events-1"><strong>With feature bands</strong> at<span> 3030 Dundas West, Toronto</span></a></li>
+                                                        <li><a href="https://www.terroni.com/locations/sud-forno-temperance"><strong>Sud Saturdays</strong> at<span> Sud Forno Temperance, Toronto</span></a></li>
+                                                        <li><a href="https://radius.ca/events-calendar"><strong>Monthly appearances</strong> at<span> Radius, Hamilton</span></a></li>
                                                     </ul>
                                                 </div>
                                             </div>
