--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <div class="inner text-start">
                                     <span>DJ, Producer &amp; Promoter</span>
                                     <h1 class="title">I’m <span>Corey Dawkins</span></h1>
-                                    <h4>Experience my music and I in Toronto.</h4>
+                                    <h4>Come and experience amazing music in Toronto.</h4>
                                 </div>
                             </div>
                         </div>
