--- a/index.html
+++ b/index.html
@@ -591,8 +591,8 @@
                                 <div class="section-title text-start mb--50 mb_sm--30 mb_md--30">
                                     <h2 class="title">Let's Chop It Up!</h2>
                                     <p class="description">Let's talk about how I can create the best possible auditory experience for your event:
-                                        <a href="tel:+8801923088574">01923 088574</a> or email:
-                                        <a href="mailto:admin@example.com"> admin@example.com</a>
+                                        <!--<a href="tel:+8801923088574">01923 088574</a> or email:
+                                        <a href="mailto:admin@example.com"> admin@example.com</a>-->
                                     </p>
                                 </div>
                                 <div class="form-wrapper">
