--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <div class="header-right">
                     <div class="social-share-inner">
                         <ul class="social-share social-style--2 d-flex justify-content-start liststyle">
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-mixcloud"></i></a></li>
+                            <li><a href="#"><i class="fab fa-bandcamp"></i></a></li>
                         </ul>
                     </div>
                     <div class="header-btn ml_md--20 ml_sm--0"><a class="rn-btn" href="#"><span>Contact Me</span></a>
@@ -589,7 +589,7 @@
                         <div class="row row--35 align-items-start">
                             <div class="col-lg-6 order-2 order-lg-1">
                                 <div class="section-title text-start mb--50 mb_sm--30 mb_md--30">
-                                    <h2 class="title">Let's Chop It Up!</h2>
+                                    <h2 class="title">Wanna Chop It Up?</h2>
                                     <p class="description">Let's talk about how I can create the best possible auditory experience for your event:
                                         <!--<a href="tel:+8801923088574">01923 088574</a> or email:
                                         <a href="mailto:admin@example.com"> admin@example.com</a>-->
