--- a/index.html
+++ b/index.html
@@ -69,35 +69,30 @@
                                     <a class="nav-link" href="#contact">Contact</a>
                                 </li>
                             </ul>
-                            <!-- End Mainmanu Nav -->
                         </div>
                     </nav>
                 </div>
                 <div class="header-right">
                     <div class="social-share-inner">
                         <ul class="social-share social-style--2 d-flex justify-content-start liststyle">
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fab fa-mixcloud"></i></a></li>
-                            <li><a href="#"><i class="fab fa-bandcamp"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="https://www.mixcloud.com/cdawkins" target="_blank"><i class="fab fa-mixcloud"></i></a></li>
+                            <li><a href="https://coreydawkins.bandcamp.com" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
                         </ul>
                     </div>
                     <div class="header-btn ml_md--20 ml_sm--0"><a class="rn-btn" href="#"><span>Contact Me</span></a>
                     </div>
-                    <!-- Start Humberger Menu  -->
                     <div class="humberger-menu d-block d-lg-none pl--20 pl_sm--10">
                         <span class="menutrigger text-white">
                             <i data-feather="menu"></i>
                         </span>
                     </div>
-                    <!-- End Humberger Menu  -->
-                    <!-- Start Close Menu  -->
                     <div class="close-menu d-block d-lg-none">
                         <span class="closeTrigger">
                             <i data-feather="x"></i>
                         </span>
                     </div>
-                    <!-- End Close Menu  -->
                 </div>
             </div>
         </header>
@@ -643,10 +638,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                         <div class="inner text-center">
                             <ul class="social-share rn-lg-size d-flex justify-content-center liststyle">
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fab fa-mixcloud"></i></a></li>
-                                <li><a href="#"><i class="fab fa-bandcamp"></i></a></li>
+                                <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                                <li><a href="https://www.mixcloud.com/cdawkins" target="_blank"><i class="fab fa-mixcloud"></i></a></li>
+                                <li><a href="https://coreydawkins.bandcamp.com" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
                             </ul>
                         </div>
                     </div>
