--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="social-share-inner">
                         <ul class="social-share social-style--2 d-flex justify-content-start liststyle">
                             <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="https://www.facebook.com/djcoreydawkins" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://www.mixcloud.com/cdawkins" target="_blank"><i class="fab fa-mixcloud"></i></a></li>
                             <li><a href="https://coreydawkins.bandcamp.com" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
                         </ul>
@@ -639,7 +639,7 @@
                         <div class="inner text-center">
                             <ul class="social-share rn-lg-size d-flex justify-content-center liststyle">
                                 <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/djcoreydawkins" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="https://www.mixcloud.com/cdawkins" target="_blank"><i class="fab fa-mixcloud"></i></a></li>
                                 <li><a href="https://coreydawkins.bandcamp.com" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
                             </ul>
