--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="header-right">
                     <div class="social-share-inner">
                         <ul class="social-share social-style--2 d-flex justify-content-start liststyle">
-                            <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/dawkskin77" target="_blank"><i class="fab fa-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/djcoreydawkins" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://www.mixcloud.com/cdawkins" target="_blank"><i class="fab fa-mixcloud"></i></a></li>
                             <li><a href="https://coreydawkins.bandcamp.com" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
@@ -638,7 +638,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                         <div class="inner text-center">
                             <ul class="social-share rn-lg-size d-flex justify-content-center liststyle">
-                                <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/dawkskin77" target="_blank"><i class="fab fa-instagram"></i></a></li>
                                 <li><a href="https://www.facebook.com/djcoreydawkins" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="https://www.mixcloud.com/cdawkins" target="_blank"><i class="fab fa-mixcloud"></i></a></li>
                                 <li><a href="https://coreydawkins.bandcamp.com" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
