--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Start Page Wrapper  -->
         <main class="page-wrapper">
             <!-- Start Slider Area  -->
-            <div class="rn-slider-area" id="home" style="border-bottom: 1px solid #fff;">
+            <div class="rn-slider-area" id="home" style="border-bottom: 1px solid #f9004d;">
                 <!-- Start Single Slide  -->
                 <div class="slide personal-portfolio-slider slider-paralax slider-style-3 dark-slider d-flex align-items-center justify-content-center bg_image bg_image--28">
                     <div class="container">
@@ -121,7 +121,7 @@
             <!-- End Slider Area  -->
 
             <!-- Start About Area  -->
-            <div class="about-area rn-section-gap bg_color--5" id="about" style="border-bottom: 1px solid #fff;">
+            <div class="about-area rn-section-gap bg_color--5" id="about" style="border-bottom: 1px solid #999;">
                 <div class="about-wrapper">
                     <div class="container">
                         <div class="row row--35 align-items-center">
@@ -339,7 +339,7 @@
             <!-- End About Area  -->
 
             <!-- Start Service Area  -->
-            <div class="rn-service-area rn-section-gap bg_color--5" id="service" style="border-bottom: 1px solid #fff;">
+            <div class="rn-service-area rn-section-gap bg_color--5" id="service" style="border-bottom: 1px solid #999;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -414,7 +414,7 @@
             <!-- Start Service Area  -->
 
             <!-- Start Portfolio Area  -->
-            <div class="rn-portfolio-area rn-section-gap bg_color--5" id="portfolio" style="border-bottom: 1px solid #fff;">
+            <div class="rn-portfolio-area rn-section-gap bg_color--5" id="portfolio" style="border-bottom: 1px solid #999;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -494,7 +494,7 @@
             <!-- Start Portfolio Area  -->
 
             <!-- Start Blog Area  -->
-            <div class="rn-blog-area rn-section-gap bg_color--5" id="blog" style="border-bottom: 1px solid #fff;">
+            <div class="rn-blog-area rn-section-gap bg_color--5" id="blog" style="border-bottom: 1px solid #999;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -578,7 +578,7 @@
             <!-- End Blog Area  -->
 
             <!-- Start Contact Area  -->
-            <div class="rn-contact-area rn-section-gap bg_color--5" id="contact" style="border-bottom: 1px solid #fff;">
+            <div class="rn-contact-area rn-section-gap bg_color--5" id="contact" style="border-bottom: 1px solid #f9004d;">
                 <div class="contact-form--1">
                     <div class="container">
                         <div class="row row--35 align-items-start">
