--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
         </main>
         <!-- End Page Wrapper  -->
         <!-- Start Footer Style Two  -->
-        <div class="footer-style-2 ptb--30 bg_image--5" data-black-overlay="6">
+        <div class="footer-style-2 ptb--30 bg_image--5" data-black-overlay="6" style="background-color: #f9004d;">
             <div class="wrapper plr--50 plr_sm--20">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
