--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
                                             <div class="tab-pane fade" id="rn-education" role="tabpanel" aria-labelledby="education">
                                                 <div class="single-tab-content">
                                                     <ul>
-                                                        <li><a href="https://www.junctionunderground.com/events">My <strong><span style="color: #f9004d;">RUUTED</span> events</strong> at<span> The Junction Underground, Toronto</span></a></li>
-                                                        <li><a href="http://www.3030dundaswest.com/events-1">With <strong>feature bands</strong> at<span> 3030 Dundas West, Toronto</span></a></li>
-                                                        <li><a href="https://www.terroni.com/locations/sud-forno-temperance"><strong>Sud Saturdays</strong> at<span> Sud Forno Temperance, Toronto</span></a></li>
-                                                        <li><a href="https://radius.ca/events-calendar"><strong>Monthly appearances</strong> at<span> Radius, Hamilton</span></a></li>
+                                                        <li><a href="https://www.junctionunderground.com/events" target="_blank">My <strong><span style="color: #f9004d;">RUUTED</span> events</strong> at<span> The Junction Underground, Toronto</span></a></li>
+                                                        <li><a href="http://www.3030dundaswest.com/events-1" target="_blank">With <strong>feature bands</strong> at<span> 3030 Dundas West, Toronto</span></a></li>
+                                                        <li><a href="https://www.terroni.com/locations/sud-forno-temperance" target="_blank"><strong>Sud Saturdays</strong> at<span> Sud Forno Temperance, Toronto</span></a></li>
+                                                        <li><a href="https://radius.ca/events-calendar" target="_blank"><strong>Monthly appearances</strong> at<span> Radius, Hamilton</span></a></li>
                                                     </ul>
                                                 </div>
                                             </div>
