--- a/index.html
+++ b/index.html
@@ -441,12 +441,12 @@
                                 </div>
                                 <div class="content">
                                     <div class="inner">
-                                        <p>Development</p>
-                                        <h4><a href="portfolio-details.html">Getting tickets to the big show</a>
+                                        <p>Saturday, April 15th, 10pm</p>
+                                        <h4><a href="#"><strong>Radius</strong>, Hamilton</a>
                                         </h4>
-                                        <div class="portfolio-button">
+                                        <!--<div class="portfolio-button">
                                             <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
@@ -462,12 +462,12 @@
                                 </div>
                                 <div class="content">
                                     <div class="inner">
-                                        <p>Development</p>
-                                        <h4><a href="portfolio-details.html">Getting tickets to the big show</a>
+                                        <p>Friday, April 21st, 10pm</p>
+                                        <h4><a href="#"><strong>3030 Dundas West</strong>, Toronto</a>
                                         </h4>
-                                        <div class="portfolio-button">
+                                        <!--<div class="portfolio-button">
                                             <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
@@ -483,12 +483,12 @@
                                 </div>
                                 <div class="content">
                                     <div class="inner">
-                                        <p>Development</p>
-                                        <h4><a href="portfolio-details.html">Getting tickets to the big show</a>
+                                        <p>Saturday, April 22nd, 10pm</p>
+                                        <h4><a href="#"><strong>3030 Dundas West</strong>, Toronto</a>
                                         </h4>
-                                        <div class="portfolio-button">
+                                        <!--<div class="portfolio-button">
                                             <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
